# web

./: Cargo.toml  rustfmt.toml
docs/: dir_tree.txt  tree.txt
docs/explain/: driver.md
src/: README.md  lib.rs  main.rs
src/components/: attribute.rs  command.rs  from.rs  mod.rs  url.rs
src/components/macros/: group.rs  import.rs  mod.rs
src/logic/: mod.rs
src/logic/browser/: behaviors.rs  mod.rs  settings.rs  tab.rs
src/logic/browser/actions/: actions.rs  click.rs  mod.rs
src/logic/browser/browsers/: mod.rs
src/logic/browser/chrome/: mod.rs
src/logic/browser/default/: driver.rs  element.rs  mod.rs  tab.rs
src/logic/browser/driver/: mod.rs  settings.rs
src/logic/browser/drivers/: behaviors.rs  brave.rs  chrome.rs  driver.rs  edge.rs  mod.rs  web_driver.rs
src/logic/browser/element/: brave.rs  chrome.rs  edge.rs  mod.rs
src/logic/browser/elements/: brave.rs  chrome.rs  edge.rs  element.rs  mod.rs
src/logic/browser/events/: README.md
src/logic/browser/navigate/: mod.rs
src/logic/browser/operations/: mod.rs  operations.rs
src/logic/browser/responses/: mod.rs  new_tab.rs
src/logic/browser/rw/: mod.rs  read.rs
src/logic/browser/tabs/: brave.rs  chrome.rs  edge.rs
src/logic/browser/tools/: behaviors.rs  element.rs  mod.rs  tab.rs
src/logic/browser/url/: brave.rs  chrome.rs  edge.rs  mod.rs
src/logic/new_browser/: behaviors.rs  mod.rs
src/logic/scraper/parse/: mod.rs
src/logic/server/: behavior.rs  mod.rs
src/utils/: error.rs  from.rs  mod.rs  url.rs
src/utils/functions/: mod.rs
src/utils/types/: by.rs  error.rs  mod.rs  result.rs  robots_txt.rs  tensor.rs  wsstream.rs
(+60 files in other folders)
