[package]
name = "web"
version = "0.0.1"
edition = "2021"

[dependencies]
chart = { path = "../chart" }
macros = { path = "../macros" }
macros_derive = { path = "../macros/macros_derive" }
protocol = { path = "../protocol" }
reqwest = { version = "0.12.4", features = ["json", "blocking"] }
serde = { version =  "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }