[package]
name = "web"
version = "0.0.1"
edition = "2021"

[dependencies]
chart = { path = "../chart" }
macros = { path = "../macros" }
protocol = { path = "../protocol" }
serde_json = "1.0.128"
tokio = { version = "1.37.0", features = ["full"] }
reqwest = { version = "0.12.7", features = ["json", "rustls-tls"] }
serde = {version = "1.0.210", features = ["derive"]}
tokio-tungstenite = "0.23.1"
futures = "0.3"