[package]
name = "ntwrk"
version = "0.0.1"
edition = "2021"

[dependencies]
serde_json = { version = "1.0.128", optional = true }
tokio = { version = "1.37.0", features = ["full"], optional = true }
reqwest = { version = "0.12.7", features = ["json", "rustls-tls"], optional = true }
serde = {version = "1.0.210", features = ["derive"], optional = true }
tokio-tungstenite = { version = "0.24.0", optional = true }
futures = { version = "0.3", optional = true }

[features]
default = ["browser", "scraper", "crawler"]
browser = ["dep:serde_json", "dep:tokio", "dep:reqwest", "dep:serde", "dep:tokio-tungstenite", "dep:futures"]
scraper = []
crawler = []